--- a/src/index.scss
+++ b/src/index.scss
@@ -57,8 +57,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
   color: var(--clr-grey-9);
   line-height: 1.5;
@@ -97,13 +97,25 @@ p {
 }
 
 .center {
-    text-align: center;
-  }
+  text-align: center;
+}
 
-  .birthday {
-    font-weight: bold;
-    font-size: 2rem;
-  }
+.birthday {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+%btn-shared {
+  display: inline-block;
+  border: none;
+  cursor: pointer;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  border-radius: var(--radius);
+  border-color: transparent;
+  padding: 0.5rem 0;
+}
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
@@ -149,16 +161,7 @@ main {
   align-items: center;
 }
 
-%btn-shared {
-    display: inline-block;
-    border: none;
-    cursor: pointer;
-    text-transform: capitalize;
-    letter-spacing: var(--spacing);
-    border-radius: var(--radius);
-    border-color: transparent;
-    padding: 0.5rem 0;
-  }
+//Container
 
 .container {
   width: 90vw;
@@ -171,11 +174,9 @@ main {
 
   h3 {
     font-weight: normal;
-  text-transform: none;
-  margin-bottom: 2rem;
+    text-transform: none;
+    margin-bottom: 2rem;
   }
-
-  
 
   .btn {
     &-primary {
@@ -186,15 +187,17 @@ main {
 
     &-secondary {
       @extend %btn-shared;
-       color: var(--clr-white);
-    width: 100%;
-  background: var(--clr-pink);
-  margin: 2rem auto 0 auto;
-  font-size: 1.2rem;
-  outline: 1px solid rgba(242, 138, 178, 0.8);
+      color: var(--clr-white);
+      width: 100%;
+      background: var(--clr-pink);
+      margin: 2rem auto 0 auto;
+      font-size: 1.2rem;
+      outline: 1px solid rgba(242, 138, 178, 0.8);
     }
   }
 }
+
+//Person
 
 .person {
   display: grid;
@@ -205,10 +208,10 @@ main {
 
   img {
     width: 75px;
-  height: 75px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: var(--light-shadow);
+    height: 75px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: var(--light-shadow);
   }
 
   h4 {
@@ -219,5 +222,3 @@ main {
     margin-bottom: 0;
   }
 }
-
-
